# PhysicallyBasedSimulation

./: .gitignore  CMakeLists.txt  build_instructions
Assignment1/: CMakeLists.txt  CMakeSettings.json  Exercise.cpp  Makefile  MassSpring.cpp  Point.cpp  Point.h  Scene.cpp  Scene.h  Spring.cpp  Spring.h  Vec2.h
Assignment1/results/: Physically Based Simulation PS Report of Ex 1.docx  Report  euler.sh  euler100_0.001.txt  euler100_0.002.txt  euler100_0.003.txt  euler100_0.004.txt  euler110_0.001.txt  euler110_0.002.txt  euler110_0.003.txt  euler110_0.004.txt  euler120_0.001.txt  euler120_0.002.txt  euler120_0.003.txt  euler120_0.004.txt  euler130_0.001.txt  euler130_0.002.txt  euler130_0.003.txt  euler130_0.004.txt  euler140_0.001.txt  euler140_0.002.txt  euler140_0.003.txt  euler140_0.004.txt  euler150_0.001.txt  euler150_0.002.txt  euler150_0.003.txt  euler150_0.004.txt  euler160_0.001.txt  euler160_0.002.txt  euler160_0.003.txt  euler160_0.004.txt  euler70_0.001.txt  euler70_0.002.txt  euler70_0.003.txt  euler70_0.004.txt  euler80_0.001.txt  euler80_0.002.txt  euler80_0.003.txt  euler80_0.004.txt  euler90_0.001.txt  (+108 more)
Assignment2/: CMakeLists.txt  CMakeSettings.json  FEM  FEM.cpp  FEModel.cpp  FEModel.h  LinTriElement.cpp  LinTriElement.h  Makefile  data.csv
Assignment2/results/: report.text
Assignment2/utils/: HSV2RGB.h  Mat3x3.h  PCGT.h  SparseSymMat.h  Vec2.h  Vec3.h
Assignment3/: CMakeLists.txt  Exercise.cpp  Fluid2D.cpp  Fluid2D.h  FluidSim.cpp  Makefile  Vec2.h
Final/: CMakeLists.txt  Console.hpp  ContactInfo.hpp  Main.cpp  Polygon.cpp  Polygon.h  Vec2.h  chrono_timer.h  collision_detection.h  collision_resolution.h  globals.h  physical_object.cpp  physical_object.h  smoother.h
Final/presentation/: rigid_body_simulation.pptx
